# mg-reports

./: LICENSE  pyproject.toml
.github/workflows/: climate-archive.yaml  climate-archive.yaml.bak  climate-realtime.yaml
publication/: Makefile
publication/source/: .gitignore  conf.py  facts.py  generate.py  index.rst
publication/source/climate/: index.rst
publication/source/climate/archive/: index.rst.j2
publication/source/dehumidifier/: index.rst
publication/source/dehumidifier/archive/: index.rst.j2
src/mobilesolutionworks/mg/: __init__.py
src/mobilesolutionworks/mg/climate/: __init__.py  data.py  plot.py  realtime.py
